# honey-strike

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Caddyfile  DELIVERABLES.md  DEMO.md  DEMO_DEPLOY.md  DEPLOY.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  SECURITY.md  TESTING.md  alembic.ini  docker-compose.demo.yml  docker-compose.dev.yml  docker-compose.prod.yml  fly.toml  openapi.json  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_alerts_log_channel.py  003_tls_service.py  004_alerts_discord_channel.py  005_more_services.py  006_user_roles_and_progress.py  007_duels.py  008_user_email.py
docs/: 00_README.md  01_SPEC_Master.md  02_API_Contracts.md  03_Domain_Events.md  04_PostgreSQL_Schema.sql  05_Indexes_and_Partitioning.sql  06_Data_Retention_Matrix.md  07_Compliance_and_Legal_Packet.md  08_Capture_Flows_and_Privacy.md  09_Production_Code_Quality_Gate_Checklist.md  10_90_Day_Delivery_Plan.md  11_Infrastructure_Topology.md  12_Production_Runbooks.md  13_Disaster_Recovery_Playbook.md  14_DR_Playbook_and_Drills.md  15_Production_Readiness_Verification.md  16_Launch_Runbook.md  17_V1.0_Release_Notes.md  18_HONEYSTRIKE_Compliance_Checklist.md  19_HONEYSTRIKE_Production_Readiness_Checklist.md  PRESENTATION.md  architecture.md
docs/ci/: db-restore-validate.sh  failover-drill.sh  release-gate-policy.md  release-gate.sh
infra/: backup.sh  deploy.sh  setup.sh  update_maxmind.sh
infra/grafana/dashboards/: honeystrike-overview.json
infra/grafana/provisioning/dashboards/: honeystrike.yml
infra/grafana/provisioning/datasources/: postgres.yml
infra/loki/: loki-config.yml  promtail-config.yml
infra/migrations/: 003_events_partitioning.sql
samples/: sample-session-report.html
scripts/: check_lesson_drift.py  probe_ssh_hydra.py  seed_demo.py
src/honeystrike/: __init__.py  config.py
src/honeystrike/api/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  schemas.py  stix.py  taxii.py  ws.py
src/honeystrike/api/lessons/attack/: ftp-hydra.toml  full-compromise.toml  http-log4shell.toml  http-recon.toml  http-sqlmap.toml  http-traversal.toml  (+2 more)
src/honeystrike/api/routers/: admin.py  arena.py  defender.py  duels.py  health.py  lessons.py  play.py  profile.py  progress.py  replay.py  sessions.py  stats.py
src/honeystrike/api/static/: admin_users.js  analytics.js  app.css  arena.js  auth.js  command_palette.js  dashboard.js  duel.js  lesson.js  mascot_mini.js  play_attack.js  play_attack_hub.js  play_defend.js  play_defend_hub.js  profile.js  replay.js  session_detail.js  sessions.js  threat_border.js  warroom.js
src/honeystrike/api/templates/: _base.html  _mascot.html  _mascot_mini.html  admin_users.html  analytics.html  arena.html  dashboard.html  duel.html  lesson.html  login.html  play_attack.html  play_defend.html  play_defend_arena.html  play_landing.html  profile.html  replay.html  reset.html  session_detail.html  sessions.html  verify.html  warroom.html
src/honeystrike/cli/: __init__.py  __main__.py  auth.py  http_client.py  login.py  output.py
src/honeystrike/cli/attack/: __init__.py  campaigns.py  canaries.py  runners.py  scenarios.py
src/honeystrike/cli/defend/: __init__.py  campaign_score.py  flags.py  label.py  listen.py  narrate.py  snapshot.py  tail.py
src/honeystrike/cli/lobby/: __init__.py  challenge.py  players.py  register.py
src/honeystrike/core/: blocklist.py  db.py  event_bus.py  events.py  live_feed.py  logging.py  mailer.py  models.py  progression.py  session_manager.py
src/honeystrike/lobby/: __init__.py  __main__.py  app.py  store.py
src/honeystrike/services/ftp/: __init__.py  __main__.py  handler.py
src/honeystrike/services/http/: __init__.py  __main__.py  detectors.py  ja3.py  server.py  templates.py
src/honeystrike/services/rdp/: __init__.py  __main__.py  pdu.py
src/honeystrike/services/redis_honeypot/: __main__.py  protocol.py
src/honeystrike/services/smtp/: __main__.py  protocol.py
src/honeystrike/services/ssh/: __init__.py  __main__.py  attempt_counter.py  host_key.py  server.py  shell.py
src/honeystrike/services/telnet/: __main__.py  protocol.py
src/honeystrike/services/tls_sniffer/: __init__.py  __main__.py
src/honeystrike/workers/: __init__.py
src/honeystrike/workers/alerting/: __init__.py  channels.py  worker.py
src/honeystrike/workers/intel/: __init__.py  abuseipdb.py  aggregator.py  fingerprint.py  geo.py  ml_anomaly.py  signatures.py  threat_scoring.py  ttp_rules.py
src/honeystrike/workers/maintenance/: __init__.py  partition_events.py
src/honeystrike/workers/reports/: __init__.py  renderer.py  worker.py
tests/e2e/: duel.spec.js  helpers.js  package-lock.json  package.json  playwright.config.js  register.spec.js  roles.spec.js  screenshots.spec.js  smoke.spec.js
tests/integration/: conftest.py  test_alerting_live.py  test_api_live.py  test_api_ws_live.py  test_cross_service.py  test_fingerprint_worker_live.py  test_ftp_live.py  test_http_live.py  test_ml_anomaly_live.py  test_phase6_live.py  test_rdp_live.py  test_reports_live.py  test_ssh_live.py  test_stix_taxii_live.py  test_tls_live.py
tests/unit/: test_abuseipdb.py  test_aggregator.py  test_alerting_channels.py  test_alerting_worker.py  test_api_auth.py  test_api_schemas.py  test_api_ws.py  test_arena.py  test_attempt_counter.py  test_auth_register.py  test_auth_reset.py  test_blocklist.py  test_cli_campaigns.py  test_cli_canaries.py  test_cli_flag_detection.py  test_duels.py  test_events.py  test_fingerprint_ja3.py  test_fingerprint_worker.py  test_geo.py  test_http_detectors.py  test_ja3.py  test_lesson_drift.py  test_lessons_router.py  test_live_feed.py  test_lobby_store.py  test_ml_anomaly.py  test_new_protocols.py  test_partition_events.py  test_play_ratelimit.py  test_progression.py  test_rdp_pdu.py  test_report_renderer.py  test_session_manager.py  test_signatures.py  test_ssh_host_key.py  test_ssh_server.py  test_ssh_shell.py  test_stix_bundle.py  test_threat_scoring.py  (+1 more)
(+17 files in other folders)
